
Version 1.0ea8 - 01/20/06

- new: rule dependency graph (can be exported to EPS or bitmap file)
- new: syntax coloring for generated Java code
- new: references, comments and strings are now colorized inside actions
- new: project document to edit multiple grammars, Java and any other text files and build
  them automatically within ANTLRWorks

- improved ANTLR usage by running ANTLR only when necessary
- rules are now sorted in interpreter and debugger if they are sorted in the editor
- new message in status bar if an error is reported in the console
- disabling syntax diagram now display a message
- new idea to convert invalid string literals to single quote literals
- now reload the tokenVocab file content when ANTLRWorks is back to front
- ctrl-k: now copy the deleted end of line to the system clipboard
- ctrl-t: now swap two characters (insert templates is now invoked using meta-k)
- improved selection of a identifier
- improved word selection using the mouse: dragging the mouse without releasing the button
  now extends the selection word by word (as expected on Mac OS X)
- improved decision DFA diagram using more precise B-splines
- added an arrow at the end of each syntax diagram
- check grammar command now also analyze the lexer part of a combined grammar
- popup the console tab if anything is reported in the console
- improved current select path in syntax diagram when switching path visiblity
- improved syntax diagram display (colored label and smaller size)

- fixed a bug where some tokens were not properly colorized (cut and past the same token over itself)
- fixed a bug where the file content was not properly parsed if modified outside ANTLRWorks
- fixed a bug where the analysis indicator was colored improperly
- fixed a bug where Go To Character would be off by one character
- fixed a bug when reading the tokenVocab file (was missing the first character)
- fixed a bug where ANTLR would not be able to read the tokenVocab file (missing path)