@@ -1,5 +1,7 @@
 package org.antlr.works.syntax;
 
+import org.antlr.works.ate.syntax.misc.ATEToken;
+import org.antlr.works.components.grammar.CEditorGrammar;
 import org.antlr.works.prefs.AWPrefs;
 
 import javax.swing.text.BadLocationException;
@@ -39,7 +41,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 public class GrammarAutoIndent {
 
-    public static void autoIndentOnSpecificKeys(Document doc, int offset, int length) throws BadLocationException {
+    public static void autoIndentOnSpecificKeys(CEditorGrammar editor, Document doc, int offset, int length) throws BadLocationException {
         String s = doc.getText(offset-1, length+1);
         if(s.length() < 2)
             return;
@@ -55,6 +57,11 @@ public class GrammarAutoIndent {
                 doc.insertString(offset, "\t"+c2, null);
             }
         } else if(c2 == ':') {
+            // If we know we are in a block token ignore the auto-indent on ':'
+            ATEToken token = editor.getCurrentToken();
+            if(token != null && token.type == GrammarSyntaxLexer.TOKEN_BLOCK)
+                    return;
+
             // Try to reach the beginning of the line by parsing only an ID
             // (which is the rule name)
             boolean beginningOfRule = true;
@@ -66,7 +73,7 @@ public class GrammarAutoIndent {
                     // beginning of line reached
                     // Little hack: go back to see if
                     // we see a '{' indicating that we are in an action and should not
-                    // peform auto-indenting - this is not a perfect solution,
+                    // perform auto-indenting - this is not a perfect solution,
                     // only a hack until I find a better solution later ;-)
                     Segment seg = new Segment();
                     doc.getText(0, offset, seg);
